--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>11</java.version>
+    	<backend-maven-plugin.version>1.9.1</backend-maven-plugin.version>
 	</properties>
 
 	<dependencies>
